<resources>
    <string name="app_name">PopularMovies</string>
    <string name="action_settings">Settings</string>
    <string name="order_by">Order by</string>
    <string name="movie_popular">Popular</string>
    <string name="movie_top_rated">Top rated</string>
    <string name="activity_detail">MovieDetail</string>
    <string name="chooser_title">Choose the app?</string>

    <!-- Data Movie -->
    <string name="movie_title">Title</string>
    <string name="movie_year">2017</string>
    <string name="movie_duration">120min</string>
    <string name="movie_rating">8.1/10</string>
    <string name="movie_mark_favorite">Mark as \nFavorite</string>
    <string name="movie_description">Description</string>
    <string name="movie_trailers">Trailers:</string>
    <string name="movie_no_trailer">Trailer 1</string>

</resources>
